antlr_gen/RmdRulesParser.py
# Generated from RmdRules.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class RmdRulesParser ( Parser ):

    grammarFileName = "RmdRules.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'to'", "'+'", "'-'", "'*'", "'/'", "<INVALID>", 
                     "'and'", "'or'", "'not'", "'in'", "'refRule'", "'set'", 
                     "'=='", "'!='", "'>='", "'<='", "'>'", "'<'", "';'", 
                     "'    '", "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "'['", "']'", "','", "'('", 
                     "')'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "SECTION_HEADER", "AND", 
                      "OR", "NOT", "IN", "REFRULE", "SET", "EQ", "NEQ", 
                      "GTE", "LTE", "GT", "LT", "SEMI", "TAB", "NEWLINE", 
                      "WS", "BOOLEAN", "DATE", "NUMBER", "STRING", "LBRACK", 
                      "RBRACK", "COMMA", "LPAREN", "RPAREN", "IDENTIFIER", 
                      "LINE_COMMENT" ]

    RULE_start = 0
    RULE_dslDocument = 1
    RULE_headerRow = 2
    RULE_ruleRow = 3
    RULE_context = 4
    RULE_name = 5
    RULE_priority = 6
    RULE_description = 7
    RULE_conditions = 8
    RULE_actionsHeader = 9
    RULE_actionLine = 10
    RULE_action = 11
    RULE_expr = 12
    RULE_term = 13
    RULE_arithmeticExpr = 14
    RULE_arithmeticTerm = 15
    RULE_arithmeticFactor = 16
    RULE_factor = 17
    RULE_functionCall = 18
    RULE_exprList = 19
    RULE_comparison = 20
    RULE_refRule = 21
    RULE_value = 22
    RULE_listLiteral = 23
    RULE_compOp = 24

    ruleNames =  [ "start", "dslDocument", "headerRow", "ruleRow", "context", 
                   "name", "priority", "description", "conditions", "actionsHeader", 
                   "actionLine", "action", "expr", "term", "arithmeticExpr", 
                   "arithmeticTerm", "arithmeticFactor", "factor", "functionCall", 
                   "exprList", "comparison", "refRule", "value", "listLiteral", 
                   "compOp" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    SECTION_HEADER=6
    AND=7
    OR=8
    NOT=9
    IN=10
    REFRULE=11
    SET=12
    EQ=13
    NEQ=14
    GTE=15
    LTE=16
    GT=17
    LT=18
    SEMI=19
    TAB=20
    NEWLINE=21
    WS=22
    BOOLEAN=23
    DATE=24
    NUMBER=25
    STRING=26
    LBRACK=27
    RBRACK=28
    COMMA=29
    LPAREN=30
    RPAREN=31
    IDENTIFIER=32
    LINE_COMMENT=33

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class StartContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def dslDocument(self):
            return self.getTypedRuleContext(RmdRulesParser.DslDocumentContext,0)


        def EOF(self):
            return self.getToken(RmdRulesParser.EOF, 0)

        def getRuleIndex(self):
            return RmdRulesParser.RULE_start

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStart" ):
                listener.enterStart(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStart" ):
                listener.exitStart(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStart" ):
                return visitor.visitStart(self)
            else:
                return visitor.visitChildren(self)




    def start(self):

        localctx = RmdRulesParser.StartContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_start)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 50
            self.dslDocument()
            self.state = 51
            self.match(RmdRulesParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DslDocumentContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def headerRow(self):
            return self.getTypedRuleContext(RmdRulesParser.HeaderRowContext,0)


        def ruleRow(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(RmdRulesParser.RuleRowContext)
            else:
                return self.getTypedRuleContext(RmdRulesParser.RuleRowContext,i)


        def getRuleIndex(self):
            return RmdRulesParser.RULE_dslDocument

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDslDocument" ):
                listener.enterDslDocument(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDslDocument" ):
                listener.exitDslDocument(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDslDocument" ):
                return visitor.visitDslDocument(self)
            else:
                return visitor.visitChildren(self)




    def dslDocument(self):

        localctx = RmdRulesParser.DslDocumentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_dslDocument)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 53
            self.headerRow()
            self.state = 55 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 54
                self.ruleRow()
                self.state = 57 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==32):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class HeaderRowContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SECTION_HEADER(self, i:int=None):
            if i is None:
                return self.getTokens(RmdRulesParser.SECTION_HEADER)
            else:
                return self.getToken(RmdRulesParser.SECTION_HEADER, i)

        def NEWLINE(self):
            return self.getToken(RmdRulesParser.NEWLINE, 0)

        def TAB(self, i:int=None):
            if i is None:
                return self.getTokens(RmdRulesParser.TAB)
            else:
                return self.getToken(RmdRulesParser.TAB, i)

        def getRuleIndex(self):
            return RmdRulesParser.RULE_headerRow

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterHeaderRow" ):
                listener.enterHeaderRow(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitHeaderRow" ):
                listener.exitHeaderRow(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitHeaderRow" ):
                return visitor.visitHeaderRow(self)
            else:
                return visitor.visitChildren(self)




    def headerRow(self):

        localctx = RmdRulesParser.HeaderRowContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_headerRow)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 59
            self.match(RmdRulesParser.SECTION_HEADER)
            self.state = 62 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 60
                self.match(RmdRulesParser.TAB)
                self.state = 61
                self.match(RmdRulesParser.SECTION_HEADER)
                self.state = 64 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==20):
                    break

            self.state = 66
            self.match(RmdRulesParser.NEWLINE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class RuleRowContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def context(self):
            return self.getTypedRuleContext(RmdRulesParser.ContextContext,0)


        def TAB(self, i:int=None):
            if i is None:
                return self.getTokens(RmdRulesParser.TAB)
            else:
                return self.getToken(RmdRulesParser.TAB, i)

        def name(self):
            return self.getTypedRuleContext(RmdRulesParser.NameContext,0)


        def priority(self):
            return self.getTypedRuleContext(RmdRulesParser.PriorityContext,0)


        def description(self):
            return self.getTypedRuleContext(RmdRulesParser.DescriptionContext,0)


        def conditions(self):
            return self.getTypedRuleContext(RmdRulesParser.ConditionsContext,0)


        def actionsHeader(self):
            return self.getTypedRuleContext(RmdRulesParser.ActionsHeaderContext,0)


        def NEWLINE(self):
            return self.getToken(RmdRulesParser.NEWLINE, 0)

        def actionLine(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(RmdRulesParser.ActionLineContext)
            else:
                return self.getTypedRuleContext(RmdRulesParser.ActionLineContext,i)


        def getRuleIndex(self):
            return RmdRulesParser.RULE_ruleRow

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRuleRow" ):
                listener.enterRuleRow(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRuleRow" ):
                listener.exitRuleRow(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRuleRow" ):
                return visitor.visitRuleRow(self)
            else:
                return visitor.visitChildren(self)




    def ruleRow(self):

        localctx = RmdRulesParser.RuleRowContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_ruleRow)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 68
            self.context()
            self.state = 69
            self.match(RmdRulesParser.TAB)
            self.state = 70
            self.name()
            self.state = 71
            self.match(RmdRulesParser.TAB)
            self.state = 72
            self.priority()
            self.state = 73
            self.match(RmdRulesParser.TAB)
            self.state = 74
            self.description()
            self.state = 75
            self.match(RmdRulesParser.TAB)
            self.state = 76
            self.conditions()
            self.state = 77
            self.match(RmdRulesParser.TAB)
            self.state = 78
            self.actionsHeader()
            self.state = 79
            self.match(RmdRulesParser.NEWLINE)
            self.state = 81 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 80
                self.actionLine()
                self.state = 83 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==20):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ContextContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(RmdRulesParser.IDENTIFIER, 0)

        def getRuleIndex(self):
            return RmdRulesParser.RULE_context

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterContext" ):
                listener.enterContext(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitContext" ):
                listener.exitContext(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitContext" ):
                return visitor.visitContext(self)
            else:
                return visitor.visitChildren(self)




    def context(self):

        localctx = RmdRulesParser.ContextContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_context)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 85
            self.match(RmdRulesParser.IDENTIFIER)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class NameContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(RmdRulesParser.IDENTIFIER, 0)

        def getRuleIndex(self):
            return RmdRulesParser.RULE_name

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterName" ):
                listener.enterName(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitName" ):
                listener.exitName(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitName" ):
                return visitor.visitName(self)
            else:
                return visitor.visitChildren(self)




    def name(self):

        localctx = RmdRulesParser.NameContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_name)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 87
            self.match(RmdRulesParser.IDENTIFIER)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PriorityContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NUMBER(self):
            return self.getToken(RmdRulesParser.NUMBER, 0)

        def getRuleIndex(self):
            return RmdRulesParser.RULE_priority

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPriority" ):
                listener.enterPriority(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPriority" ):
                listener.exitPriority(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPriority" ):
                return visitor.visitPriority(self)
            else:
                return visitor.visitChildren(self)




    def priority(self):

        localctx = RmdRulesParser.PriorityContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_priority)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 89
            self.match(RmdRulesParser.NUMBER)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DescriptionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def STRING(self):
            return self.getToken(RmdRulesParser.STRING, 0)

        def getRuleIndex(self):
            return RmdRulesParser.RULE_description

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDescription" ):
                listener.enterDescription(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDescription" ):
                listener.exitDescription(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDescription" ):
                return visitor.visitDescription(self)
            else:
                return visitor.visitChildren(self)




    def description(self):

        localctx = RmdRulesParser.DescriptionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_description)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 91
            self.match(RmdRulesParser.STRING)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ConditionsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self):
            return self.getTypedRuleContext(RmdRulesParser.ExprContext,0)


        def getRuleIndex(self):
            return RmdRulesParser.RULE_conditions

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterConditions" ):
                listener.enterConditions(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitConditions" ):
                listener.exitConditions(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitConditions" ):
                return visitor.visitConditions(self)
            else:
                return visitor.visitChildren(self)




    def conditions(self):

        localctx = RmdRulesParser.ConditionsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_conditions)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 93
            self.expr(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ActionsHeaderContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SECTION_HEADER(self):
            return self.getToken(RmdRulesParser.SECTION_HEADER, 0)

        def getRuleIndex(self):
            return RmdRulesParser.RULE_actionsHeader

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterActionsHeader" ):
                listener.enterActionsHeader(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitActionsHeader" ):
                listener.exitActionsHeader(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitActionsHeader" ):
                return visitor.visitActionsHeader(self)
            else:
                return visitor.visitChildren(self)




    def actionsHeader(self):

        localctx = RmdRulesParser.ActionsHeaderContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_actionsHeader)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 95
            self.match(RmdRulesParser.SECTION_HEADER)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ActionLineContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def TAB(self):
            return self.getToken(RmdRulesParser.TAB, 0)

        def action(self):
            return self.getTypedRuleContext(RmdRulesParser.ActionContext,0)


        def NEWLINE(self):
            return self.getToken(RmdRulesParser.NEWLINE, 0)

        def getRuleIndex(self):
            return RmdRulesParser.RULE_actionLine

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterActionLine" ):
                listener.enterActionLine(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitActionLine" ):
                listener.exitActionLine(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitActionLine" ):
                return visitor.visitActionLine(self)
            else:
                return visitor.visitChildren(self)




    def actionLine(self):

        localctx = RmdRulesParser.ActionLineContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_actionLine)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 97
            self.match(RmdRulesParser.TAB)
            self.state = 98
            self.action()
            self.state = 99
            self.match(RmdRulesParser.NEWLINE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ActionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SET(self):
            return self.getToken(RmdRulesParser.SET, 0)

        def IDENTIFIER(self):
            return self.getToken(RmdRulesParser.IDENTIFIER, 0)

        def value(self):
            return self.getTypedRuleContext(RmdRulesParser.ValueContext,0)


        def getRuleIndex(self):
            return RmdRulesParser.RULE_action

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAction" ):
                listener.enterAction(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAction" ):
                listener.exitAction(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAction" ):
                return visitor.visitAction(self)
            else:
                return visitor.visitChildren(self)




    def action(self):

        localctx = RmdRulesParser.ActionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_action)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 101
            self.match(RmdRulesParser.SET)
            self.state = 102
            self.match(RmdRulesParser.IDENTIFIER)
            self.state = 103
            self.match(RmdRulesParser.T__0)
            self.state = 104
            self.value()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return RmdRulesParser.RULE_expr

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)


    class SingleTermContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a RmdRulesParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def term(self):
            return self.getTypedRuleContext(RmdRulesParser.TermContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSingleTerm" ):
                listener.enterSingleTerm(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSingleTerm" ):
                listener.exitSingleTerm(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSingleTerm" ):
                return visitor.visitSingleTerm(self)
            else:
                return visitor.visitChildren(self)


    class OrExprContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a RmdRulesParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self):
            return self.getTypedRuleContext(RmdRulesParser.ExprContext,0)

        def OR(self):
            return self.getToken(RmdRulesParser.OR, 0)
        def term(self):
            return self.getTypedRuleContext(RmdRulesParser.TermContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterOrExpr" ):
                listener.enterOrExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitOrExpr" ):
                listener.exitOrExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitOrExpr" ):
                return visitor.visitOrExpr(self)
            else:
                return visitor.visitChildren(self)



    def expr(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = RmdRulesParser.ExprContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 24
        self.enterRecursionRule(localctx, 24, self.RULE_expr, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            localctx = RmdRulesParser.SingleTermContext(self, localctx)
            self._ctx = localctx
            _prevctx = localctx

            self.state = 107
            self.term(0)
            self._ctx.stop = self._input.LT(-1)
            self.state = 114
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,3,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    localctx = RmdRulesParser.OrExprContext(self, RmdRulesParser.ExprContext(self, _parentctx, _parentState))
                    self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                    self.state = 109
                    if not self.precpred(self._ctx, 2):
                        from antlr4.error.Errors import FailedPredicateException
                        raise FailedPredicateException(self, "self.precpred(self._ctx, 2)")
                    self.state = 110
                    self.match(RmdRulesParser.OR)
                    self.state = 111
                    self.term(0) 
                self.state = 116
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,3,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class TermContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return RmdRulesParser.RULE_term

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)


    class SingleFactorContext(TermContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a RmdRulesParser.TermContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def arithmeticExpr(self):
            return self.getTypedRuleContext(RmdRulesParser.ArithmeticExprContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSingleFactor" ):
                listener.enterSingleFactor(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSingleFactor" ):
                listener.exitSingleFactor(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSingleFactor" ):
                return visitor.visitSingleFactor(self)
            else:
                return visitor.visitChildren(self)


    class AndExprContext(TermContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a RmdRulesParser.TermContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def term(self):
            return self.getTypedRuleContext(RmdRulesParser.TermContext,0)

        def AND(self):
            return self.getToken(RmdRulesParser.AND, 0)
        def arithmeticExpr(self):
            return self.getTypedRuleContext(RmdRulesParser.ArithmeticExprContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAndExpr" ):
                listener.enterAndExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAndExpr" ):
                listener.exitAndExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAndExpr" ):
                return visitor.visitAndExpr(self)
            else:
                return visitor.visitChildren(self)



    def term(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = RmdRulesParser.TermContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 26
        self.enterRecursionRule(localctx, 26, self.RULE_term, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            localctx = RmdRulesParser.SingleFactorContext(self, localctx)
            self._ctx = localctx
            _prevctx = localctx

            self.state = 118
            self.arithmeticExpr(0)
            self._ctx.stop = self._input.LT(-1)
            self.state = 125
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,4,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    localctx = RmdRulesParser.AndExprContext(self, RmdRulesParser.TermContext(self, _parentctx, _parentState))
                    self.pushNewRecursionContext(localctx, _startState, self.RULE_term)
                    self.state = 120
                    if not self.precpred(self._ctx, 2):
                        from antlr4.error.Errors import FailedPredicateException
                        raise FailedPredicateException(self, "self.precpred(self._ctx, 2)")
                    self.state = 121
                    self.match(RmdRulesParser.AND)
                    self.state = 122
                    self.arithmeticExpr(0) 
                self.state = 127
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,4,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx

